# rust-craft

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
datapack_macro/: Cargo.toml
datapack_macro/src/: lib.rs
macro_packet/: Cargo.toml
macro_packet/src/: lib.rs
macro_packet/src/deserialize/: mod.rs  packet.rs  struct.rs
macro_packet/src/serialize/: mod.rs  packet.rs  struct.rs
packet/: Cargo.toml
packet/macro_packet/: Cargo.toml
packet/macro_packet/src/: lib.rs
packet/macro_packet/src/deserialize/: mod.rs  packet.rs
packet/macro_packet/src/serialize/: mod.rs  struct.rs
packet/src/: byte.rs  int.rs  lib.rs  packet.rs  short.rs  string.rs  uuid.rs  varint.rs  varlong.rs
src/: client.rs  datapack.rs  main.rs  server.rs  version.rs  version_info.rs
src/connection/: client.rs  config.rs  encryption.rs  event.rs  mod.rs  server.rs
src/data_type/: byte.rs  int.rs  long.rs  mod.rs  packet.rs  short.rs  string.rs  uuid.rs  varint.rs  varlong.rs
src/data_type/packet/: handshake.rs
src/datapack/: advancements.rs  chat_type.rs  damage_type.rs  dimension_type.rs  items.rs  loot_tables.rs  recipes.rs  structures.rs  tags.rs  translate.rs
src/datapack/advancements/: criteria.rs  display.rs
src/datapack/chat_type/: chat.rs
src/datapack/chat_type/chat/: style.rs
src/datapack/dimension_type/: monster_spawn_light_level.rs
src/datapack/loot_tables/: pools.rs
src/datapack/loot_tables/pools/: entries.rs  rolls.rs
src/datapack/recipes/: ingredients.rs  result.rs
src/datapack/structures/: blocks.rs  entities.rs  palette.rs
src/logic/: configuration.rs  data.rs  login.rs  mod.rs  player.rs  status.rs
src/packet/: mod.rs
src/packet/client/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
src/packet/handshake/: handshake.rs  mod.rs
src/packet/login/: disconnect.rs  encryption.rs  login_start.rs  login_success.rs  mod.rs  set_compression.rs
src/packet/play/: login.rs
src/packet/server/: configuration.rs  login.rs  mod.rs  play.rs  status.rs
src/packet/status/: mod.rs  ping.rs  status.rs
src/packet/struct/: mod.rs  property.rs
src/struct/: chat_mode.rs  diplayed_skin_parts.rs  main_hand.rs  mod.rs  next_state.rs  registry.rs  resource_pack_result.rs  tag.rs  text_component.rs
src/struct/registry/: decoration.rs  effects.rs  int_provider.rs
src/struct/registry/effects/: additions_sound.rs  ambient_sound.rs  mood_sound.rs  music.rs  particle.rs
src/struct/text_component/: click_event.rs  hover_event.rs  nbt_content.rs  score_content.rs  selector_content.rs  text_color.rs  text_font.rs  text_style.rs  text_translation.rs
