[package]
name = "rust-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["packet", "macro_packet"]

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
boring = "4.2.0"
uuid = { version = "1.6.1", features = ["v3"] }
quartz_nbt = "0.2.8"
async-std = { version = "1.12.0", features = ["attributes"] }
futures-lite = "2.1.0"
async-ctrlc = "1.2.0"
anyhow = "1.0.77"
try-catch = "0.2.2"

packet = { path = "packet" }
