[package]
name = "rust-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rand = "0.8.5"
boring = "4.4.0"
cfb8 = "0.8.1"
aes = "0.8.3"
bitflags = "2.4.2"
uuid = { version = "1.7.0", features = ["v3"] }
mc_chat = { version = "0.3", features = ["serde"] }
async-std = { version = "1.12.0", features = ["attributes"] }
futures-lite = "2.2.0"
async-ctrlc = "1.2.0"
anyhow = "1.0.79"
stopper = "0.2.3"
epicenter = "0.1.0"

packet = { path = "packet" }
