[package]
name = "rust-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
serde_json = "1.0.114"
url = { version = "2.5.0", features = ["serde"] }
rand = "0.8.5"
boring = "4.5.0"
cfb8 = "0.8.1"
aes = "0.8.4"
bitflags = "2.5.0"
uuid = { version = "1.8.0", features = ["v3"] }
async-std = { version = "1.12.0", features = ["attributes"] }
futures-lite = "2.3.0"
async-ctrlc = "1.2.0"
anyhow = "1.0.81"
stopper = "0.2.6"
epicenter = "0.1.0"

packet = { path = "packet" }
