[package]
name = "packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
anyhow = "1.0.76"
uuid = { version = "1.6.1", features = ["v3"] }

macro_packet = { path = "../macro_packet" }
