[package]
name = "packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
anyhow = "1.0.79"
uuid = { version = "1.7.0", features = ["v3"] }

quartz_nbt = { path = "./quartz_nbt", features = ["serde"] }
macro_packet = { path = "./macro_packet" }
